--- a/create-connector.tmpl
+++ b/create-connector.tmpl
@@ -28,3 +28,34 @@ curl --location 'http://localhost:8083/connectors' \
   }
 }
 '
+
+curl --location 'http://localhost:8083/connectors' \
+--header 'Content-Type: application/json' \
+--data '{
+  "name": "mysql-carts-connector",
+  "config": {
+    "connector.class": "io.debezium.connector.mysql.MySqlConnector",
+    "tasks.max": "1",
+    "database.hostname": "mysql",
+    "database.port": "3306",
+    "database.user": "root",
+    "database.password": "root",
+    "database.server.id": "184054",
+    "database.server.name": "product_database",
+    "database.include.list": "shoppee",
+    "table.include.list": "shoppee.carts",
+    "database.history.kafka.bootstrap.servers": "kafka:29092",
+    "database.history.kafka.topic": "dbhistory.carts",
+    "schema.history.internal.kafka.topic": "schemahistory.carts",
+    "schema.history.internal.kafka.bootstrap.servers": "kafka:29092",
+    "include.schema.changes": "false",
+    "topic.prefix": "mckay",
+    "database.parse_time": "true",
+    "database.charset": "utf8mb4",
+    "database.serverTimezone": "UTC",
+    "max_idle_conns": "10",
+    "max_open_conns": "100",
+    "max_lifetime": "3600"
+  }
+}
+'
